# libseven

./: .gitignore  Cargo.toml  build.sh  generate_cargo_config.sh  install.sh
.cargo/: config
.ci_tools/: setup_env.sh
.github/workflows/: build_artifacts.yaml  rust.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/sevenshifts/libsevenclient/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: 7shifts.conf  7shifts.csv
android/app/src/main/java/com/sevenshifts/libsevenclient/: AccessControlList.java  MainActivity.java  RustGreeting.java  User.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/sevenshifts/libsevenclient/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs
