[package]
name = "seven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental", "explain"] }
tokio = { version = "1.10.0", features = ["fs", "io-util"] }
futures = "0.3"
serde = "1.0.136"
serde_json = "1.0.82"

[lib]
crate-type = ["cdylib"]
